@@ -5,6 +5,9 @@ unburden-home-dir (0.4~dev) UNRELEASED; urgency=medium
     + Expansion of environment variables inside configuration files and
       list files.
       - Add (build-)dependency on libstring-expand-perl.
+  * Test suite enhancements:
+    + Test::UBH always uses an environment variable for a part of the
+      configuration file and hence tests that feature.
   * Change section from x11 to utils. It's far more than just an Xsession
     hook nowadays.
   * Declare compliance with Debian Policy 3.9.6 (no other changes needed)
